# grafika-beadando

./: .gitignore  README.md
gyakorlat/02_EgerKezeles/GrafikaAlap/: GrafikaAlap.csproj
gyakorlat/03_Szakasz/GrafikaAlap/: Form1.cs
gyakorlat/04_VagasTeglalapra/GrafikaAlap/: Form1.cs
gyakorlat/05_Kitolto_ElFlag/GrafikaAlap/: Form1.cs
gyakorlat/06_Kitolto_Tovbbiranyu/GrafikaAlap/: Form1.cs
gyakorlat/07_ParametrikusGorbek/GrafikaAlap/: Form1.cs
gyakorlat/08_HermiteIv/GrafikaAlap/: Form1.cs
gyakorlat/10_BezierP/GrafikaAlap/: Form1.cs  GrafikaAlap.csproj
gyakorlat/11_Bezier/GrafikaAlap/: Form1.Designer.cs
gyakorlat/GrafikaAlap/GrafikaAlap/: Form1.cs
gyakorlat/GrafikaDLL/: GrafikaDLL.sln
gyakorlat/GrafikaDLL/GrafikaDLL/Curve/: BezierP.cs  BezierPArc.cs  HermiteArc.cs
gyakorlat/GrafikaDLL/GrafikaDLL/Geometry3D/: Matrix4.cs
gyakorlat/GrafikaDLL/GrafikaDLL/Math/: Binomial.cs
program/: CMakeLists.txt
program/deprecated/: Camera.h  Context.h  Entity.cpp  Entity.h  Game.cpp  Game.h  MyText.cpp  MyText.h  Projectile.h  main.cpp
program/src/: Engine.h  main.cpp
program/src/Components/: Core.h
program/src/Components/Algo/: Bezier.cpp  Bezier.h  Binomial.cpp  Binomial.h  Clip.cpp  Clip.h
program/src/Components/Core/: Anim.cpp  Anim.h  Entity.h  Globals.cpp  Globals.h  Scene.cpp  Scene.h  Timer.cpp  Timer.h
program/src/Components/Objects/: Crosshair.cpp  Crosshair.h  Fire.cpp  Fire.h
program/src/Components/Primitives/: Bezier2Arc.cpp  Bezier2Arc.h  Curve2.cpp  Curve2.h  Ellipse.cpp  Ellipse.h  Ellipse2.cpp  Ellipse2.h  Hermite2.cpp  Hermite2.h  Hermite2Arc.cpp  Hermite2Arc.h  Line.cpp  Line.h  Matrix4.cpp  Matrix4.h  Pixel.cpp  Pixel.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Vector4.cpp  Vector4.h
program/src/Components/UI/: Button.cpp  Button.h  Label.cpp  Label.h  Panel.h  Textfield.cpp  Textfield.h
program/src/Controllers/: Controller.cpp  Controller.h
program/src/Views/: MainScene.cpp  MainScene.h  MenuScene.cpp  MenuScene.h  Views.h
program/src/components/: Core.h  Engine.h  Entity.h  Globals.h  Scene.h
program/src/components/Algo/: Clip.cpp  Clip.h
program/src/components/Core/: Anim.cpp  Anim.h  Entity.h  Globals.cpp  Globals.h  PointF.cpp  PointF.h  Scene.cpp  Scene.h  Timer.cpp  Timer.h
program/src/components/Engine/: Anim.h  Animation.cpp  Animation.h  Entity.h  Globals.cpp  Globals.h  Scene.cpp  Scene.h  Timer.cpp  Timer.h
program/src/components/Objects/: Fire.cpp  Fire.h
program/src/components/Objects/Animated/: Fire.h
program/src/components/Primitives/: Ellipse.cpp  Ellipse.h  Ellipse2.cpp  Ellipse2.h  Line.cpp  Line.h  Pixel.cpp  Pixel.h  Polygon.cpp  Polygon.h
program/src/components/UI/: Button.cpp  Button.h  Panel.cpp  Panel.h  Textfield.cpp  Textfield.h
program/src/controller/: Controller.cpp  Controller.h
program/src/view/: MenuScene.cpp  MenuScene.h
program/src/zhpractice/: MyRect.cpp  MyRect.h  zh1.cpp  zh1.h  zhpractice.h
resource/gyakorlat/: Pszeudokódok.docx
resource/gyakorlat/01_Primitivek/GrafikaAlap/: Form1.cs
resource/gyakorlat/02_EgerKezeles/GrafikaAlap/: Form1.Designer.cs  Form1.cs
resource/gyakorlat/07_ParametrikusGorbek/GrafikaAlap/: Form1.Designer.cs
resource/gyakorlat/09_HermiteIvek/GrafikaAlap/: Form1.cs
resource/gyakorlat/10_BezierP/GrafikaAlap/: Form1.Designer.cs
resource/gyakorlat/11_Bezier/GrafikaAlap/: Form1.cs
resource/gyakorlat/12_ParameteresGorbe3D/GrafikaAlap/: Form1.cs
resource/gyakorlat/GrafikaDLL/GrafikaDLL/: GrafikaDLL.csproj
resource/gyakorlat/GrafikaDLL/GrafikaDLL/Curve/: BezierBernstein.cs
resource/gyakorlat/GrafikaDLL/GrafikaDLL/Extensions/: ExtensionBitmap.cs  ExtensionColor.cs  ExtensionGraphics.cs  ExtensionMouseEventArgs.cs
resource/gyakorlat/GrafikaDLL/GrafikaDLL/Geometry2D/: Line.cs  Vector2.cs
resource/gyakorlat/GrafikaDLL/GrafikaDLL/Geometry3D/: Vector4.cs
resource/gyakorlat/GrafikaDLL/GrafikaDLL/Math/: IntPair.cs
resource/gyakorlat/GrafikaDLL/GrafikaDLL/Properties/: AssemblyInfo.cs
